# linux

./: .allissues-repairs.yml  .alltools.yml  .aluminum API  .diff.fixit.yml  .gitignore  .gmail.yml  .mailmap  .travis.yml  .udemy.yml  .universal-terminal-AI  01011010110101  @github  BUILD.bazel  Build.sh  Kconfig  Legalzoom-microservices-react-classaction-lawsuits  Linux.io  MAINTAINERS  Makefile  OWNERS  OWNERS_DrNo  Prusa_I3_3Dprinter  README  README.md  SECURITY.md  Tep.io  TravisCI  UdemyCI-CD  YudatunKernel.mk  abi.bzl  build.config.common  build.config.constants  build.config.gki.riscv64  build.config.kunit.aarch64  build.config.kunit.riscv64  build.config.kunit.x86_64  build.config.rpi4  build.config.rpi5  config.gce  config.txt  (+16 more)
Documentation/: Makefile  SubmittingPatches  cgroup-v2.txt  conf.py  index.rst  kernel-parameters.txt  printk-ringbuffer.txt  xz.txt
Http/: rakutenmarketing.com
Https:/: Freelance.com  kromasol.io
LICENSES/: Spambuas
Linux extreme learning/: poetry
android/: OWNERS  abi_gki_aarch64_amlogic  abi_gki_aarch64_asus  abi_gki_aarch64_db845c  abi_gki_aarch64_exynos  abi_gki_aarch64_exynosauto  abi_gki_aarch64_fips140  abi_gki_aarch64_galaxy  abi_gki_aarch64_honor  abi_gki_aarch64_imx  abi_gki_aarch64_lenovo  abi_gki_aarch64_mtk  abi_gki_aarch64_nothing  abi_gki_aarch64_oplus  abi_gki_aarch64_pixel  abi_gki_aarch64_qcom  abi_gki_aarch64_sunxi  abi_gki_aarch64_tcl  abi_gki_aarch64_tuxera  abi_gki_aarch64_unisoc  abi_gki_aarch64_virtual_device  abi_gki_aarch64_vivo  abi_gki_aarch64_xiaomi  abi_gki_protected_exports_aarch64  gki_aarch64_protected_modules  gki_system_dlkm_modules
arch/: Kconfig
block/: TEST_MAPPING  badblocks.c  bdev.c  bfq-cgroup.c  bfq-iosched.c  bfq-iosched.h  bfq-wf2q.c  bio-integrity.c  bio.c  blk-cgroup.c  blk-cgroup.h  blk-core.c  blk-crypto-fallback.c  blk-crypto-profile.c  blk-crypto.c  blk-flush.c  blk-integrity.c  blk-ioc.c  blk-iocost.c  blk-iolatency.c  blk-lib.c  blk-map.c  blk-merge.c  blk-mq-debugfs.c  blk-mq-sched.c  blk-mq-sched.h  blk-mq-sysfs.c  blk-mq-tag.c  blk-mq.c  blk-mq.h  blk-rq-qos.c  blk-rq-qos.h  blk-settings.c  blk-softirq.c  blk-stat.c  blk-sysfs.c  blk-throttle.c  blk-throttle.h  blk-timeout.c  blk-wbt.c  (+19 more)
certs/: Raspam  extract-cert.c
contrib/: Kconfig
crypto/: Kconfig  Makefile  aead.c  af_alg.c  ahash.c  algapi.c  algboss.c  algif_aead.c  algif_hash.c  algif_skcipher.c  api.c  authenc.c  authencesn.c  blkcipher.c  ccm.c  chacha20poly1305.c  cryptd.c  crypto_user.c  crypto_user_base.c  crypto_user_stat.c  dh.c  dh_helper.c  drbg.c  ecc.c  ecdh.c  fips140-generated-testvecs.h  fips140-module.c  fips140-selftests.c  gcm.c  hmac.c  internal.h  lrw.c  mcryptd.c  morus1280.c  morus640.c  pcbc.c  rsa-pkcs1pad.c  scompress.c  shash.c  simd.c  (+5 more)
drivers/: Makefile
fs/: Kconfig  Makefile  TEST_MAPPING  aio.c  attr.c  bad_inode.c  binfmt_elf.c  binfmt_elf_fdpic.c  binfmt_flat.c  binfmt_misc.c  bio-integrity.c  bio.c  block_dev.c  buffer.c  compat.c  coredump.c  dax.c  dcache.c  direct-io.c  eventfd.c  eventpoll.c  exec.c  fcntl.c  fhandle.c  file.c  file_table.c  filesystems.c  fs-writeback.c  fs_context.c  fs_pin.c  fs_struct.c  inode.c  internal.h  io-wq.c  io-wq.h  io_uring.c  ioctl.c  iomap.c  libfs.c  locks.c  (+21 more)
init/: Kconfig  Kconfig.gki  Makefile  do_mounts.c  init_task.c  initramfs.c  main.c
io_uring/: fdinfo.c  io-wq.c  io_uring.c  io_uring.h  kbuf.c  kbuf.h  msg_ring.c  napi.c  napi.h  net.c  net.h  opdef.c  openclose.c  poll.c  register.c  rsrc.c  rw.c  sqpoll.c  timeout.c
ipc/: ipc_sysctl.c  mqueue.c  msg.c  sem.c  shm.c  util.c
kernel/: Kconfig.locks  Kconfig.preempt  Makefile  acct.c  audit.c  audit.h  audit_tree.c  audit_watch.c  auditfilter.c  auditsc.c  bounds.c  capability.c  cgroup.c  compat.c  cpu.c  cpuset.c  crash_core.c  cred.c  delayacct.c  exit.c  extable.c  fork.c  futex.c  gen_kheaders.sh  groups.c  hrtimer.c  hung_task.c  iomem.c  irq_work.c  jump_label.c  kallsyms.c  kcov.c  kexec.c  kexec_core.c  kexec_file.c  kmod.c  kprobes.c  ksysfs.c  kthread.c  lockdep.c  (+46 more)
lib/: Kconfig  Kconfig.debug  Kconfig.kasan  Makefile  assoc_array.c  bitmap.c  bootconfig.c  buildid.c  bust_spinlocks.c  closure.c  crc32.c  debugobjects.c  devres.c  digsig.c  div64.c  dma-debug.c  dynamic_debug.c  earlycpio.c  fault-inject.c  find_bit.c  fortify_kunit.c  idr.c  iov_iter.c  irq_poll.c  klist.c  kobject.c  locking-selftest.c  maple_tree.c  nlattr.c  nmi_backtrace.c  overflow_kunit.c  percpu_counter.c  percpu_ida.c  printk_ringbuffer.c  radix-tree.c  random32.c  refcount.c  rhashtable.c  sbitmap.c  scatterlist.c  (+25 more)
mm/: Kconfig  Kconfig.debug  Makefile  TEST_MAPPING  backing-dev.c  balloon_compaction.c  bootmem.c  cma.c  compaction.c  debug.c  debug_vm_pgtable.c  filemap.c  frontswap.c  gup.c  highmem.c  hmm.c  huge_memory.c  hugetlb.c  hugetlb_vmemmap.c  hwpoison-inject.c  internal.h  iov_iter.c  khugepaged.c  kmemleak.c  ksm.c  list_lru.c  madvise.c  memblock.c  memcontrol.c  memfd.c  memory-failure.c  memory.c  memory_hotplug.c  mempolicy.c  mempool.c  memremap.c  migrate.c  migrate_device.c  mincore.c  mlock.c  (+58 more)
net/: Kconfig  TEST_MAPPING  compat.c  socket.c
rust/: Makefile  exports.c  helpers.c
rust/cargo_driver/: Cargo.toml
rust/cargo_driver/src/: lib.rs
rust/osl/: COPYRIGHT  Cargo.toml  LICENSE-GPL  README.md
rust/osl/src/: error.rs  lib.rs  log.rs  math.rs  sleep.rs  sync.rs  time.rs  vec.rs
rust/osl/src/arceos/: mod.rs
rust/osl/src/arceos/driver/: mod.rs
rust/osl/src/arceos/driver/i2c/: msg.rs
rust/osl/src/driver/: irq.rs  mod.rs
rust/osl/src/driver/i2c/: functionality.rs  mod.rs  msg.rs  timing.rs
rust/osl/src/linux/: complete.rs  error.rs  log.rs  mod.rs  sleep.rs  time.rs
rust/osl/src/linux/driver/: irq.rs  mod.rs
rust/osl/src/linux/driver/i2c/: mod.rs  msg.rs
scripts/: Kbuild.include  Kconfig.include  Makefile  Makefile.build  Makefile.dtbinst  Makefile.extrawarn  Makefile.headersinst  Makefile.lib  Makefile.modfinal  Makefile.modinst  Makefile.modpost  Makefile.package  adjust_autoksyms.sh  bpf_doc.py  checkpatch.pl  checkstack.pl  checksyscalls.sh  (+21 more)
(+17164 files in other folders)
