[package]
name = "osl"
version = "0.1.0"
edition = "2021"
authors = ["Guoweikang <guoweikang.kernel@gmail.com>"]
description = "OS interface abstract layer"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = ""
repository = "https://github.com/guoweikang/osl.git"

[features]
linux=[]
arceos=[]
default=[]

[dependencies]
bitflags = "2.5.0"
derive_builder = {version ="0.20", default-features = false}
